[package]
name = "iota-discord-bot"
version = "0.1.0"
authors = ["huhn511 <sehe89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-core = { git = "https://github.com/iotaledger/iota.rs" }
env_logger = "0.6"
kankyo = "0.2"
log = "0.4"
anyhow = "1.0.28"
rand = "0.7.3"

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]